# soto

./: CMakeLists.txt  README.md
cmake/: FindCheck.cmake
include/soto/: list.h  list_template.h  sort.h  sort_template.h  soto.h  stack.h  stack_template.h  utils.h  utils_template.h
src/: list.c  list_template.c  sort.c  sort_template.c  stack.c  stack_template.c  utils.c  utils_template.c
test/: CMakeLists.txt  test_list.c  test_sort.c  test_stack.c
